# codexstock

./: .env.example  .gitignore  CHATGPT_MCP_TUNNEL_HANDOFF.md  CODEXSTOCK_MCP_SETUP.md  CODEXSTOCK_TECHNICAL_BRIEF.md  FRIEND_SETUP.md  LICENSE  PUBLIC_RELEASE.md  README.md  Run Stock Suite.bat  SECURITY.md  THIRD_PARTY_MANIFEST.json  build_exe.ps1  check_mcp_tunnel.ps1  mcp_config.local.example.json  prepare_friend_release.ps1  pyproject.toml  run_app.ps1  run_mcp_server.ps1  start_mcp_tunnel.ps1
app/: ai_staff_dialogue.py  backtest_trade_evidence.py  build_market_regime_validation.py  codexstock_mcp_server.py  execution_sidecar_audit.py  execution_sidecar_service.py  external_engine_improvement.py  external_engine_runtime.py  external_signal_poller.py  health_probe_cache.py  historical_market_data_cache.py  hundred_billion_strategy_lab.py  integrations.py  internal_developer_engine.py  internal_developer_paid_advisor.py  internal_developer_service.py  internal_developer_store.py  kis_mcp_gateway.py  kis_order_reconciliation.py  knowledge_curator.py  knowledge_engine_worker.py  live_order_state.py  mobile_console.py  mobile_pairing_cli.py  native_core.py  ops_core.py  quantking_core.py  replay_calendar_evidence.py  replay_completion_audit.py  replay_data_backfill.py  replay_data_backfill_worker.py  replay_evidence_audit.py  replay_evidence_milestones.py  replay_recovery.py  replay_regeneration_subprocess.py  replay_regeneration_worker.py  runtime_event_store.py  runtime_paths.py  runtime_storage_audit.py  safe_update_manager.py  (+3 more)
docs/: ARCHITECTURE.md  FEATURES.md  (+13 more)
(+153 files in other folders)
